<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <EditText
            android:gravity="center"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_field_res"
            android:textSize="22sp"
            android:inputType="text" />
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_res"
            android:textSize="22sp" />
        <RadioGroup
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RadioButton android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_res"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange_res"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow_res"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green_res"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cyan_res"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue_res"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/violet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/violet_res"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/start_price"
                android:layout_marginLeft="25dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="18sp"
                android:layout_marginStart="25dp" />
            <TextView
                android:id="@+id/end_price"
                android:layout_marginRight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="18sp"
                android:layout_marginEnd="25dp" />
        </LinearLayout>
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_res"
            android:textSize="22sp" />
        <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
            android:id="@+id/priceRange"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:min_value="0"
            app:max_value="1000"
            app:left_thumb_color="@color/colorPrimary"
            app:left_thumb_color_pressed="@color/colorPrimaryDark"
            app:right_thumb_color="@color/colorPrimary"
            app:right_thumb_color_pressed="@color/colorPrimaryDark"
            app:bar_highlight_color="@color/colorPrimary" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/ok_res" />
        <TextView
            android:id="@+id/error"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF3333"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
